# 13.17

./: .gitignore  CLAUDE.md
distro/home/andriy/: .bashrc  vins_service.sh  vins_service_m.sh
docker/orin/: Dockerfile  docker-compose.yml
docker/sim/: CLAUDE.md  FAQ.md  FAQ.txt  FAQ_bootstrap.md  FAQ_capture_scene.md  FAQ_capture_scene.txt  FAQ_gps.md  FAQ_gps.txt  FAQ_pid.md  FAQ_rate_loop.md  FAQ_rate_loop.txt  FAQ_vins.md  FLOW_DAMP_spec.md  HowToFlow_PID_synth.md  Makefile  README.md  docker-compose.cpu.yml  docker-compose.yml  sim_cpu_TODO.txt  todo.txt  todo2.txt  todo3.txt  todo4.txt  tune_results.md  yaw_pid.md
docker/sim/config/: mavlink-router.conf  sitl-extra.parm
docker/sim/mavlink_router/: Dockerfile
docker/sim/nav/: Dockerfile
docker/sim/scripts/: README.txt  capture_frames.sh  host_setup.sh  imu_rate.py  nav_up.sh  sim_up.sh  sitl_accel_cal.py
docker/sim/simulator/: Dockerfile
docker/sim/worlds/: mili_fortress.sdf
etc/NetworkManager/system-connections/: Tenda_34_5G.nmconnection  create_wifi.sh  info.txt
etc/mavlink-router/: main.conf
gcp/: 01_create_workspace.sh  02_power_manager.sh  03_resize_node.sh  04_check_money_leak.sh  05_delete_instance.sh  06_build_sizes.sh  07_list_instances.sh  08_add_gpu.sh  09_quota_manager.sh  10_spot_gpu_a.sh  11_spot_gpu_b.sh  12_spot_gpu_c.sh  CLAUDE.md  README.md  bootstrap_gce.sh  c3_TODO.txt  c3_gce_setup.txt  ssh_client_keepalive.txt
gcp/cpu/: README.md  ssh.sh  start.sh  stop.sh
gcp/memory/: MEMORY.md  flow-damper.md  gce-gpu-plan.md  sim-workflow.md  vins-blocker.md  vins-init.md
gcp/on_demand/: README.md  a_catch.sh  a_convert.sh  a_ssh.sh  a_start.sh  a_stop.sh  b_catch.sh  b_convert.sh  b_ssh.sh  b_start.sh  b_stop.sh  c_catch.sh  c_convert.sh  c_ssh.sh  c_start.sh  c_stop.sh
gcp/snapshot/: README.md  a_restore.sh  a_take.sh  b_restore.sh  b_take.sh  c_restore.sh  c_take.sh  list.sh
gcp/spot/: README.md  a_convert.sh  a_ssh.sh  a_start.sh  a_stop.sh  b_convert.sh  b_ssh.sh  b_start.sh  b_stop.sh  c_convert.sh  c_ssh.sh  c_start.sh  c_stop.sh
src/: concept.txt
src/camera/: CMakeLists.txt  camera_core.hpp  camera_node.cpp  camera_node_cpu.cpp  package.xml  stream.py  stream_dual.py
src/camera/cam_profiles/: cloudy.sh  sunny.sh
src/camera/tuner/cuda/: CMakeLists.txt
src/camera/tuner/plus/: CMakeLists.txt
src/lab/: CLAUDE.md  alt_hold_bootstrap.py  arm.sh  arm_takeoff.sh  attitude.py  bag_frames.py  bootstrap.sh  capture_scene.sh  disarm.sh  drift_check.py  extract_frames.py  flow_calib.py  flow_damp_node.py  flow_derotation_check.py  flow_estimator.py  flow_loop_sim.py  flow_synth_test.py  fly_square.py  gdrive_rclone_setup.md  grab_live.py  gyro_fft.py  hover.sh  land.sh  liftland.sh  make_video.py  pitch_flow_check.py  rclone.conf.example  square.sh  takeoff.sh  two_clocks.py  vins_watch.sh  yaw_check.py  yaw_flow_check.py  yaw_tune_results.txt  yaw_tune_sweep.sh
src/nav/: .gitkeep  FAQ_gps.md  README.txt  bayerizer.py  package.xml  setup.py  sim_nav.launch.py  todo.txt
src/nav/data/reference_db/: .gitignore  database.json
src/nav/data/scene_map/: .gitignore  metadata.json
src/nav/isaac_ros/: camera_split.sh  camera_split_agrus.launch.py
src/nav/launch/: nav.launch.py
src/nav/nav_pkg/: anchor_matcher.py  database.json  device_util.py  generate_mock_db.py  lg_example.py  nn1_anchor.py  nn1_anchor_howto.txt  nn2_scene.py  nn2_scene_idea.txt  openhd_streamer.py  ray_tracer.py  relocalizer.py  scene_descriptor.py  vision_pose_bridge.py
src/nav/nav_pkg/nn1/: __init__.py  anchor_matcher.py  geo.py  nn1_anchor.py  ray_tracer.py
src/nav/nav_pkg/nn2/: __init__.py  metric_decode.py  nn2_scene.py  nn2_scene_idea.txt  scene_descriptor.py
src/nav/tools/: build_reference_db.py  build_scene_map.py  demo_synth.py  eval_isometry.py  generate_mock_db.py  generate_mock_map.py  nn1_anchor_howto.txt  nn2_isometry_eval.txt  nn2_navigation_dream.txt  nn2_scene_howto.txt  relocalizer_field.py  route_field.py  route_geometry.py  train_route_coords.py  train_topograph.py  visualize_fiber.py
src/nav/tools/nn1/: build_reference_db.py  generate_mock_db.py
src/nav/tools/nn2_route/: bootstrap_gce.sh  build_global_dataset.py  c3_gce_setup.txt  c3_pipeline_howto.txt  c3_pose_graph.py  c3_qc_report.py  c3_route_pipeline.py  cross_flight_correspond.py  demo_synth.py  nn2_navigation_dream.txt  relocalizer_field.py  route_field.py  route_fusion.py  route_geometry.py  route_heads.py  route_heads_node.py  s_filter.py  train_route_coords.py
src/nav/tools/nn2_scene/: build_scene_map.py  eval_isometry.py  generate_mock_map.py  nn2_isometry_eval.txt  nn2_scene_howto.txt  nn2_topograph_theory.txt  register_flights.py  train_topograph.py  visualize_fiber.py
src/orin_shutdown/: go.mod  main.go
src/sim/: CLAUDE.md  FAQ_capture_scene.txt  bayerizer.py  imu_frd_to_flu.py  sim_nav.launch.py
src/vins/: cam_node_1920x1200.py  force_opencv.cmake
tools/mdtopdf/: claudetopdf.py  md_to_pdf.py
(+65 files in other folders)
