<?xml version="1.0"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.1.0</version>
  <description>CUDA V4L2 camera node for VINS-Mono</description>
  <maintainer email="andriykutsevol@gmail.com">Andriy Kutsevol</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
