<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_pkg</name>
  <version>0.0.1</version>
  <description>
    Навигационные нейросети (NN1 — якорная локализация, NN2 — топологическая
    сцена) + openhd_streamer: даунлинк-видео в OpenHD с оверлеем детекций.
  </description>
  <maintainer email="andriykutsevol@gmail.com">Andriy Kutsevol</maintainer>
  <license>Proprietary</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
